--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <title>Juego!!</title>
   </head>
   <body>
@@ -13,5 +14,6 @@
       <div id="blue" class="color blue rigth" data-color="blue"></div>
       <button id="btnStart" class="btn-start" onclick="Jugar()">A darle!!!</button>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
