Anadiendo estilos al proyecto

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="container">
       <div id="red" class="color red left" data-color="red"></div>
-      <div id="blue" class="color blue rigth" data-color="blue"></div>
+      <div id="blue" class="color blue right" data-color="blue"></div>
       <div id="yellow" class="color yellow left" data-color="yellow"></div>
-      <div id="blue" class="color blue rigth" data-color="blue"></div>
+      <div id="blue" class="color blue right" data-color="blue"></div>
       <button id="btnStart" class="btn-start" onclick="Jugar()">A darle!!!</button>
     </div>
     <script src="index.js"></script>
