--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="red" class="color red left" data-color="red"></div>
       <div id="blue" class="color blue right" data-color="blue"></div>
       <div id="yellow" class="color yellow left" data-color="yellow"></div>
-      <div id="blue" class="color blue right" data-color="blue"></div>
+      <div id="green" class="color green right" data-color="green"></div>
       <button id="btnStart" class="btn-start" onclick="Jugar()">A darle!!!</button>
     </div>
     <script src="index.js"></script>
