--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div id="green" class="color green right" data-color="green"></div>
       <button id="btnStart" class="btn-start" onclick="Jugar()">A darle!!!</button>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
